<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_boarder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/subject"
                android:textColor="@color/textwhite"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/feedback_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_textview"
                android:gravity="top|left"
                android:hint="@string/hint_subject"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/message"
                android:textColor="@color/textwhite"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/feedback_message"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_textview"
                android:gravity="top|left"
                android:hint="@string/hint_characters"
                android:maxLength="150"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/send_feedback_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_btn"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/send"
        android:textAlignment="center"
        android:textColor="@color/textwhite" />

</LinearLayout>